--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sae",
-  "version": "0.0.0",
-  "description": "Sigma Alpha Epsilon West Chester Website",
+  "name": "HTMLStrategyGame",
+  "version": "0.0.1",
+  "description": "Trying to make a strategy game template with simple html, css, and js tools",
   "main": "fileServer.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
